--- a/alert_window/index.html
+++ b/alert_window/index.html
@@ -6,10 +6,15 @@
 </head>
 <body>
     <script type="module" src="/src/alert-renderer.ts"></script>
-    <div class="img-container">
+    <div class="container">
         <img src="/keycard.png"/>
     </div>
-    <h1>T'as badgé ?</h1>
+    <div class="flex-container-center">
+        <h1>T'as badgé ?</h1>
+    </div>
+    <div class="flex-container-center">
+        <button id="yep" type="submit">YEP!</button>
+    </div>
     <audio autoplay="true">
         <source src="/alert.mp3" type="audio/mpeg">
     </audio>
